--- a/content/resources/6-803s19-th.md
+++ b/content/resources/6-803s19-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-803-the-human-intelligence-enterprise-spring-2019/0651461f6ff86923a3b914b5bd8165cc_6-803s19-th.jpg
+file: /media/courses/6-803-the-human-intelligence-enterprise-spring-2019/0651461f6ff86923a3b914b5bd8165cc_6-803s19-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Michelangelo's famous fresco of God's Creation of Adam, on the ceiling
@@ -10,6 +10,7 @@ image_metadata:
   image-alt: ' A painting of a bearded man (God) touching the hand of a naked man
     (Adam).'
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-803s19-th.jpg
